fix letter-spacing again

--- a/assets/scss/components/_tech.scss
+++ b/assets/scss/components/_tech.scss
@@ -66,7 +66,7 @@
     font-weight: 500;
     font-size: 5.5rem;
     line-height: 110%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     color: var(--font-color);
 }
 
@@ -76,7 +76,7 @@
     font-weight: 500;
     font-size: 4rem;
     line-height: 110%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     color: var(--font-color);
 }
 
@@ -86,7 +86,7 @@
     font-weight: 500;
     font-size: 2.5rem;
     line-height: 140%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     color: var(--font-color);
 }
 
@@ -96,7 +96,7 @@
     font-weight: 500;
     font-size: 2rem;
     line-height: 140%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     color: var(--font-color);
 }
 
@@ -106,7 +106,7 @@
     font-weight: 400;
     font-size: 2rem;
     line-height: 140%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     color: var(--font-color);
 }
 
@@ -117,7 +117,7 @@
     font-weight: 500;
     font-size: 1.7rem;
     line-height: 140%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
 }
 
 // Для цены в карточке товара
@@ -128,7 +128,7 @@
     font-weight: 500;
     font-size: 1.5rem;
     line-height: 140%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
 }
 
 // Для текста WOMAZING в логотипе (на всякий случай)
@@ -137,7 +137,7 @@
     font-weight: 500;
     font-size: 1.6rem;
     line-height: 100%;
-    letter-spacing: 1rem;
+    letter-spacing: 0.1rem;
     text-transform: uppercase;
     color: var(--font-color);
 }
@@ -148,7 +148,7 @@
     font-weight: 400;
     font-size: 1.5rem;
     line-height: 140%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     color: var(--font-color);
 }
 
@@ -167,7 +167,7 @@
     font-weight: 400;
     font-size: 1.3rem;
     line-height: 140%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     color: var(--font-color);
 }
 
@@ -177,7 +177,7 @@
     font-weight: 400;
     font-size: 1.7rem;
     line-height: 138.9%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     text-align: center;
     color: var(--cta-color);
     background-color: var(--background-color);
@@ -201,7 +201,7 @@
     font-weight: 400;
     font-size: 1.7rem;
     line-height: 138.9%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.02rem;
     text-align: center;
     color: var(--background-color);
     background-color: var(--cta-color);
